...
    android:id="@+id/linlayout"
    android:layout_width="match_parent"
    android:layout_height="?attr/listPreferredItemHeightLarge"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="18sp" />

...
