...
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/leave"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Leave" />

    <item android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Delete" />
    <item android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="Edit Event" />

</menu>
